LPD-51705 "adds more opens to the JDK_JAVA_OPTIONS environment variable to align with the ootb bundles"